--- a/data/themes/forest.toml
+++ b/data/themes/forest.toml
@@ -5,7 +5,7 @@ name = "Forest"
 light = true
 
 # Primary
-primary = "#daede5"
+primary = "#4caf50"
 primary_light = "#80e27e"
 primary_dark = "#087f23"
 
@@ -16,5 +16,5 @@ menu_text_active = "#1b5e20"
 menu_title = "#fff"
 
 # Home sections
-home_section_odd = "rgb(255, 255, 255)"
+home_section_odd = "rgb(218, 237, 229)"
 home_section_even = "rgb(247, 247, 247)"
