--- a/data/themes/forest.toml
+++ b/data/themes/forest.toml
@@ -10,10 +10,10 @@ primary_light = "#80e27e"
 primary_dark = "#087f23"
 
 # Menu
-menu_primary = "#4caf50"
-menu_text = "#fff"
-menu_text_active = "#1b5e20"
-menu_title = "#fff"
+menu_primary = "#489e7d"
+menu_text = "#d1e6de"
+menu_text_active = "#fff"
+menu_title = "#d1e6de"
 
 # Home sections
 home_section_odd = "rgb(218, 237, 229)"
